--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "chart.js": "^2.9.3",
+    "randomcolor": "^0.6.2",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
@@ -21,7 +22,7 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-        "no-loop-func": "off"
+      "no-loop-func": "off"
     }
   },
   "browserslist": {
