--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.6.0",
     "chart.js": "^2.9.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.5.2",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
@@ -21,7 +23,7 @@
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
-        "no-loop-func": "off"
+      "no-loop-func": "off"
     }
   },
   "browserslist": {
